# rag-agent

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  spec.md
.kiro/specs/rag-service-migration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: lang.md
app/: config.py  dependencies.py  main.py
app/core/: chain.py  chat_history.py  embeddings.py  llm.py  prompt.py  query_rewriter.py  retriever.py
app/infra/: chunker.py  db.py  indexer.py  security.py
app/schemas/: chat.py  config.py  index.py
tests/: test_chat_history.py  test_chunker.py  test_config.py  test_indexer.py  test_prompt.py  test_query_rewriter.py  test_security.py
