[project]
name = "rag-service"
version = "0.1.0"
description = "RAG 服务 - 基于 Python + LangChain + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "qdrant-client>=1.12.0",
    "sse-starlette>=2.1.0",
    "redis[hiredis]>=5.2.0",
    "pydantic-settings>=2.6.0",
    "tiktoken>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "fakeredis>=2.25.0",
]



[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
